updated footer to have current year when adding project, it will have the correct owner selected if you made a mistake and have to refill the form added typo to settings.inc.php.dist

--- a/conf/settings.inc.php.dist
+++ b/conf/settings.inc.php.dist
@@ -27,7 +27,7 @@ define("__LDAP_PORT__",389);
 define("__TORQUE_ACCOUNTING__","/var/spool/torque/server_priv/accounting/");
 define("__TORQUE_JOBS_LOG__","/var/spool/torque/job_logs/");
 
-define("__GALAXY_USER__",""
+define("__GALAXY_USER__","");
 define("__ADMIN_EMAIL__","");
 define("__SESSION_NAME__","cluster_accounting");
 define("__SESSION_TIMEOUT__",3600);
