--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
 		"components/jqueryui": "1.10.4",
 		"jpgraph/jpgraph": "3.5.0-beta-1",
 		"components/bootstrap": "2.3.2",
-		"pear/mail_mime": "1.10.1"
+		"pear/mail_mime": "1.10.1",
+		"pear/mail": "1.4.1"
 	},
 	"config": {
 		"component-dir": "html/vendor/components"
