--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
 		"components/jquery": "2.1.0",
 		"components/jqueryui": "1.10.4",
 		"jpgraph/jpgraph": "3.5.0-beta-1",
+		"components/bootstrap-default": "2.3.2",
 		"components/bootstrap": "2.3.2",
 		"pear/mail_mime": "1.10.1",
 		"pear/mail": "1.4.1"
