--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
 		"phpoffice/phpexcel": "1.8.1",
 		"components/jquery": "2.1.0",
 		"components/jqueryui": "1.10.4",
-		"jpgraph/jpgraph": "3.5.0-beta-1",
+		"jpgraph/jpgraph": "4.0.2",
 		"components/bootstrap-default": "2.3.2",
 		"components/bootstrap": "2.3.2",
 		"pear/mail_mime": "1.10.1",
