--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
 		"components/bootstrap-default": "2.3.2",
 		"components/bootstrap": "2.3.2",
 		"pear/mail_mime": "1.10.1",
-		"pear/mail": "1.4.1"
+		"pear/mail": "1.4.1",
+		"twig/twig": "v2.12.1"
 	},
 	"config": {
 		"component-dir": "html/vendor/components"
