keep subdirectories with a .gitkeep file

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 /html/vendor
 /components
 /log/*
-!.gitkeep
 composer.lock
-/templates/custom
+/templates/custom/*
+
+####Whitelist#####
+
+!.gitkeep
