Started migration to bootstrap 4

--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,13 @@
 {
 	"require": {
 		"phpoffice/phpspreadsheet": "1.9.0",
-		"components/jquery": "3.3.1",
+		"components/jquery": "3.4.1",
 		"components/jqueryui": "1.12.1",
 		"jpgraph/jpgraph": "4.0.2",
-		"components/bootstrap-default": "2.3.2",
-		"components/bootstrap": "2.3.2",
-		"pear/mail_mime": "1.10.1",
+		"twbs/bootstrap": "v4.3.1",
+		"pear/mail_mime": "1.10.4",
 		"pear/mail": "1.4.1",
-		"twig/twig": "v2.12.1"
-	},
-	"config": {
-		"component-dir": "html/vendor/components"
+		"twig/twig": "v2.12.1",
+		"fortawesome/font-awesome": "5.11.2"
 	}
 }
