--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
 	"require": {
+		"php":	">=5.4",
 		"phpoffice/phpexcel": "1.8.1",
 		"components/jquery": "3.3.1",
 		"components/jqueryui": "1.12.1",
