Started migration to IGBIllinois-php composer package

--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,33 @@
 {
+	"repositories" : [
+        {
+                "type": "vcs",
+                "url": "https://www.github.com/IGBIllinois/IGBIllinois-php"
+        }
+        ],
 	"require": {
-		"php":	">=7.1",
-		"phpoffice/phpspreadsheet": "1.9.0",
+		"php":	">=7.2",
 		"components/jquery": "3.4.1",
 		"components/jqueryui": "1.12.1",
-		"jpgraph/jpgraph": "4.0.2",
 		"twbs/bootstrap": "v4.4.1",
 		"pear/mail_mime": "1.10.4",
 		"pear/mail": "1.4.1",
 		"twig/twig": "v3.0.3",
-		"fortawesome/font-awesome": "5.11.2"
-	}
+		"fortawesome/font-awesome": "5.11.2",
+		"igbillinois/igbillinois-php": "dev-main"
+	},
+	 "scripts": {
+                "post-update-cmd": [
+                "mkdir -p html/vendor/components",
+		"mkdir -p html/vendor/twbs",
+		"mkdir -p html/vendor/fortawesome",
+                "cp -R vendor/twbs/bootstrap html/vendor/twbs/",
+                "cp -R vendor/components/jquery html/vendor/components/",
+                "cp -R vendor/components/jqueryui html/vendor/components/",
+		"cp -R vendor/fortawesome/font-awesome html/vendor/fortawesome/"
+                ]
+
+        }
+
+	
 }
