--- a/conf/settings.inc.php.dist
+++ b/conf/settings.inc.php.dist
@@ -21,7 +21,8 @@ define("__LDAP_PEOPLE_OU__","");
 define("__LDAP_GROUP_OU__","");
 define("__LDAP_BIND_USER__","");
 define("__LDAP_BIND_PASS__","");
-define("__LDAP_SSL__",FALSE);
+define("__LDAP_SSL__",false);
+define("__LDAP_TLS__",false);
 define("__LDAP_PORT__",389);
 define("__JOB_SCHEDULER__","");
 define("__TORQUE_ACCOUNTING__","/var/spool/torque/server_priv/accounting/");
