--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
 		"twbs/bootstrap": "v4.6.2",
 		"twig/twig": "v3.4.2",
 		"fortawesome/font-awesome": "5.15.4",
-		"igbillinois/igbillinois-php": "dev-main"
+		"igbillinois/igbillinois-php": "dev-main",
 	},
 	 "scripts": {
                 "post-update-cmd": [
