--- a/conf/settings.inc.php.dist
+++ b/conf/settings.inc.php.dist
@@ -16,6 +16,8 @@ define("MYSQL_HOST","");
 define("MYSQL_USER","");
 define("MYSQL_PASSWORD","");
 define("MYSQL_DATABASE","");
+define("MYSQL_PORT",3306);
+define("MYSQL_SSL",false);
 define("LDAP_HOST","");
 define("LDAP_BASE_DN","");
 define("LDAP_PEOPLE_OU","");
@@ -35,6 +37,7 @@ define("SMTP_PORT",25);
 define("SMTP_USERNAME","");
 define("SMTP_PASSWORD","");
 define("FROM","");
+define("FROM_NAME","");
 define("TO","");
 define("ADMIN_EMAIL","");
 
