Added report prefix setting instead of using hostname in report filenames

--- a/conf/settings.inc.php.dist
+++ b/conf/settings.inc.php.dist
@@ -53,4 +53,5 @@ define("LOG_FILE","");
 define("ENABLE_LOG",false);
 define("BOA_CFOP",'');
 define('PASSWORD_RESET_URL','');
+define('REPORT_PREFIX','Report');
 ?>
