Added debug option Moved emails to IGBIllinois-php email class Fixed email twig templated

--- a/conf/settings.inc.php.dist
+++ b/conf/settings.inc.php.dist
@@ -11,6 +11,7 @@
 ////////////////////////////////////
 
 define("TITLE","Cluster Accounting");
+define("DEBUG",false);
 define("TIMEZONE","UTC");
 define("MYSQL_HOST","");
 define("MYSQL_USER","");
