Fixed composer file

--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,7 @@
 {
+	"name": "igbillinois/cluster_accounting",
+	"description": "A billing interfaceo for HPC Clusters",
+	"license": "GPL-3.0-only",
 	"repositories" : [
         {
                 "type": "vcs",
