Added CFOP_API_KEY setting validate_cfops.php now returns list of invalid cfops Fixed bug when disabling a project didn't also disable the cfops

--- a/conf/settings.inc.php.dist
+++ b/conf/settings.inc.php.dist
@@ -52,4 +52,6 @@ define("ENABLE_LOG",false);
 define("BOA_CFOP",'');
 define('PASSWORD_RESET_URL','');
 define('REPORT_PREFIX','Report');
+define('CFOP_API_KEY','');
+
 ?>
