--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
 		"twbs/bootstrap": "v4.6.2",
 		"twig/twig": "v3.4.3",
 		"fortawesome/font-awesome": "5.15.4",
-		"igbillinois/igbillinois-php": "1.3.0"
+		"igbillinois/igbillinois-php": "dev-main"
 	},
 	 "scripts": {
                 "post-update-cmd": [
