Fixed bug where owner_id wasn't set if it was a default project Added disable cfop api setting so it won't check AITS cfop api

--- a/conf/settings.inc.php.dist
+++ b/conf/settings.inc.php.dist
@@ -52,6 +52,7 @@ define("ENABLE_LOG",false);
 define("BOA_CFOP",'');
 define('PASSWORD_RESET_URL','');
 define('REPORT_PREFIX','Report');
+define('CFOP_API_ENABLED',false);
 define('CFOP_API_KEY','');
 
 define('FBS_ACCESS_KEY','');
