Updated job billing to use current cfop Added edit project to update billing for previous months

--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,9 @@
 		"select2/select2": "4.0.13",
 		"ttskch/select2-bootstrap4-theme": "1.5.2",
 		"twbs/bootstrap": "v4.6.2",
-		"twig/twig": "3.14.0",
+		"twig/twig": "v3.4.3",
 		"fortawesome/font-awesome": "5.15.4",
-		"igbillinois/igbillinois-php": "dev-main"
+		"igbillinois/igbillinois-php": "1.4.0"
 	},
 	 "scripts": {
                 "post-update-cmd": [
