--- a/conf/settings.inc.php.dist
+++ b/conf/settings.inc.php.dist
@@ -57,5 +57,10 @@ define('CFOP_API_KEY','');
 define('FBS_ACCESS_KEY','');
 define('FBS_SECRET_KEY','');
 define('FBS_FACILITY_ID','');
+define('FBS_FACILITY_CODE','');
+define('FBS_AREACODE','');
+define('FBS_LABCODE','');
+define('FBS_JOBS_SKUCODE','');
+define('FBS_DATA_SKUCODE','');
 
 ?>
