Supervisings now receiving billing email which includes their supervising user

--- a/conf/settings.inc.php.dist
+++ b/conf/settings.inc.php.dist
@@ -11,6 +11,7 @@
 ////////////////////////////////////
 
 define("TITLE","Cluster Accounting");
+define("WEBSITE_URL","");
 define("DEBUG",false);
 define("TIMEZONE","UTC");
 define("MYSQL_HOST","");
