Added IGNORE_DIRECTORIES settings to ignore directories on verification.php page

--- a/conf/settings.inc.php.dist
+++ b/conf/settings.inc.php.dist
@@ -62,4 +62,5 @@ define('FBS_AREACODE','');
 define('FBS_JOBS_SKUCODE','');
 define('FBS_DATA_SKUCODE','');
 
+define('IGNORE_DIRECTORIES',array());
 ?>
